--- a/submission_7/footballrefs.bib
+++ b/submission_7/footballrefs.bib
@@ -1,13 +1,15 @@
-@techreport{ep,
-author = {Prpic, Martina and Rosamund, Shreeves},
+@misc{ep,
+author = {Prpic, Martina and Shreeves, Rosamund},
 title = {{Violence against women in the EU: State of play}},
-url = {http://www.europarl.europa.eu/thinktank/en/document.html?reference=EPRS\_BRI(2018)630296},
+institution = {European Parliament},
+url = {https://www.europarl.europa.eu/RegData/etudes/BRIE/2018/630296/EPRS_BRI(2018)630296_EN.pdf},
 year = {2018}
 }
 
 
 
-@techreport{Office2019,
+
+@misc{Office2019,
 author = {{Home Office}},
 pages = {9},
 title = {{Home Office Counting Rules for Recorded Crime - Crime Flags}},
@@ -19,16 +21,19 @@ abstract = {A property of the Poisson regression model is mean-variance equality
 author = {Cameron, A. Colin and Trivedi, Pravin K.},
 journal = {Journal of Econometrics},
 title = {{Regression-based tests for overdispersion in the Poisson model}},
-year = {1990}
+year = {1990},
+number = {3},
+pages = {347--364},
+volume = {47}
 }
-@techreport{HomeOffice2019,
+@misc{HomeOffice2019,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{Crime Recording General Rules}},
 url = {https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment{\_}data/file/854733/count-general-dec-2019.pdf},
 year = {2019}
 }
-@techreport{HomeOffice2011,
+@misc{HomeOffice2011,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{The National Standard for Incident Recording}},
@@ -106,12 +111,13 @@ year = {1998}
 @article{Davies2018,
 author = {Davies, Gareth},
 journal = {The Telegraph},
-month = {dec},
 title = {{England's unexpected World Cup progression behind record-high alcohol poisoning cases, NHS says}},
 url = {https://www.telegraph.co.uk/news/2018/12/30/englands-unexpected-world-cup-progression-behind-record-high/},
-year = {2018}
+year = {2018},
+month = {December},
+day = {30}
 }
-@techreport{Homeoffice,
+@misc{Homeoffice,
 author = {{Home Office}},
 institution = {Home Office},
 title = {{Police funding for England and Wales 2015 to 2019}},
